--- a/quotes.css
+++ b/quotes.css
@@ -1,82 +1,138 @@
 body{
-    background: linear-gradient(45deg, rgb(231, 110, 62),rgb(240, 240, 114));
+   /* background: linear-gradient(45deg, rgb(231, 110, 62),rgb(240, 240, 114));*/
+     
+   
+    font-family: 'Georgia', serif;
+    
+    background-color: #f4f4f4;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
+    
 
     /*closest-corner at 50% 70%*/
    
 }
 .whole{
-    
-     height:250px;
-     width:500px;
-     
-     
-     background: linear-gradient(45deg,rgb(228, 198, 133),rgb(226, 199, 140));
-     border-radius: 10px;
-     
-     box-shadow: 0px 2px 5px 1px red; /* horizontal to screen ,vertical to screen, blur,color*/
-    /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
+     height:350;
+     width:650px;
 
-     margin: -50px 0 0 -50px;
+     text-align: center;
+ 
+     /*background: linear-gradient(45deg,rgb(228, 198, 133),rgb(226, 199, 140));*/
+     background-image: url("authors/back.jpg");
+     background-repeat: no-repeat;
+     background-size:cover;
+     border-radius: 10px;
+     /*box-shadow: 0px 2px 5px 1px red;
+     /*horizontaltoscreen,verticaltoscreen,blur,color*//*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+     */
+     box-shadow: 0px 2px 5px 3px white;
+    /* margin: -50px 0 0 -50px;*/
      position: absolute;
-     top: 40%;
-     left: 35%;
-      display: flex;
+     /*top: 40%;
+     left: 35%;*/
+     display: flex;
      flex-direction: column;
-      justify-content: center;
+     justify-content: center;
      align-items: center;
+     -webkit-border-radius: 10px;
+     -moz-border-radius: 10px;
+     -ms-border-radius: 10px;
+     -o-border-radius: 10px;
+     text-align: center;
+    
+    padding: 20px;
    
+    position: relative;
+}
+.authorPhoto{
+    height:100px;
+    width:100px;
+    border-radius: 50%;
+    margin-bottom: 2px;
+    
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+}
+    
+
+#quotePhotoContainer {
+    margin-top:2px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #inner{
-    padding:20px;
-    
+   padding:20px;
+   margin-top:1px;  
+  
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   text-align: center;
 }
+
 #quote{
-    font-style: normal;
+    
     font-weight:bold; 
-    font-size:x-large;
+    color:white;
+    font-style: italic;
+    font-size: 1.8em;
+    margin-bottom: 10px;
 }
+
 #author{
+    
+    color:white;
+    display:flex;
+    flex-direction: column;
+    align-items: center;   
+    font-style: italic;
+    font-weight: 500;
+    font-size: 1.2em;
+    margin-bottom: 10px;
+}
+
+#authname{
     font-style: italic;
     font-weight: 500;
     font-size: 18px;
     text-align: center;
+    margin-bottom: 2px;
 }
 #btn{
     height: 35px;
     width:auto;
-    float:right;
-    background: linear-gradient(35deg, red 10%,white);
+    /*background: linear-gradient(35deg, red 10%,white);
+    */background-color:blue ;
     color: white;
+    font-size: large;
+    font-weight: bold;
     font-size:15px;
-    border-radius: 4px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-  
-}
- 
+    border-radius: 10px;
+    box-shadow: 0px 2px 5px 2px white;
+    /*transition-duration: 0.4s;
+    cursor: pointer;*/
 
-#btn:hover{
+    margin-top: 20px;
+    
+}
+
+/*#btn:hover{
     
 background: linear-gradient(35deg,blue 5% ,yellow );
     color:white;
- }
+ }*/
 
- img{
-    height:15px;
- }
- hr{
-    height: 12px;
-    border: 0;
-    box-shadow: inset 0 12px 12px -12px brown;
-    height:2px;
 
- }
+
  
 
- @media screen and (max-width: 800px) {
- .whole{
-  width: 55%; /* The width is 100%, when the viewport is 800px or smaller */
-   height:300px;
- }
-}
+ 
+
+
